...
          BottomNavigationBarItem(
            icon: Icon(Icons.shopping_bag),
            label: '상품',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.shopping_cart),
            label: '장바구니',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.receipt_long),
            label: '주문',
          ),
          BottomNavigationBarItem(
...
